<resources>
    <string name="app_name">Shared Reminders</string>
    <string name="no_reminders">No reminders yet</string>
    <string name="reminder_title">Title</string>
    <string name="reminder_description">Description</string>
    <string name="set_date">Set Date</string>
    <string name="set_time">Set Time</string>
    <string name="selected_date_and_time">Selected Date and Time:</string>
    <string name="save_reminder">Save Reminder</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="delete_reminder">Delete Reminder</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_reminder_confirmation">Are you sure you want to delete this reminder?</string>


    <string name="edit_reminder">Edit Reminder</string>
    <string name="error_saving_reminder">Failed to save reminder</string>
    <string name="error_deleting_reminder">Failed to delete reminder</string>
    <string name="reminder_saved">Reminder saved!</string>
    <string name="reminder_deleted">Reminder deleted!</string>
    <string name="error_loading_reminders">Error loading reminders</string>
    <string name="auth_error">Authentication failed. Please try again.</string>
    <string name="reminder_details">Reminder Details</string>
    <string name="action_settings">Settings</string>
    <string name="share">Share</string>
    <string name="shared_with">Shared With:</string>
    <string name="add_user">Add User</string>
    <string name="add_users">Add Users</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="fill_all_fields">Please fill in all fields</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="username_required">Username is required</string>
    <string name="valid_email_required">Valid email is required</string>
    <string name="password_length_error">Password must be at least 6 characters</string>
    <string name="username_taken">Username already taken</string>
    <string name="registration_successful">Registration successful</string>
    <string name="error_registration">Registration failed</string>

</resources>
